--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -47,6 +47,12 @@
         android:label="@string/menu_list"
         tools:layout="@layout/fragment_management" />
 
+    <fragment
+        android:id="@+id/nav_setting"
+        android:name="com.hache.appentrepatas.ui.configuration.ConfigurationFragment"
+        android:label="@string/menu_settings"
+        tools:layout="@layout/fragment_management" />
+
     <!--
     <fragment
         android:id="@+id/nav_statistics"
